URLFilter works now with the new MVVM model

--- a/WebContent/WEB-INF/zul/crawler/web/index.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/index.zul
@@ -14,7 +14,7 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window border="none"
+<window border="none" apply="org.zkoss.bind.BindComposer"
 	viewModel="@id('webcrawler') @init('com.jaeksoft.searchlib.web.controller.crawler.CrawlerController')">
 	<tabbox>
 		<tabs>
