--- a/WebContent/WEB-INF/zul/crawler/web/url.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/url.zul
@@ -14,175 +14,194 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="searchUrl"
-	use="com.jaeksoft.searchlib.web.controller.crawler.web.UrlController">
-	<listbox model="@{searchUrl.urlList}" multiple="false"
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('searchUrl') @init('com.jaeksoft.searchlib.web.controller.crawler.web.UrlController')">
+	<listbox model="@load(searchUrl.urlList)" multiple="false"
 		checkmark="false"
 		emptyMessage="Click on the search button to see the URLs">
 		<listhead sizable="true">
 			<listheader label="Url" valign="top">
 				<vbox width="100%">
-					<textbox width="90%" value="@{searchUrl.like}" />
-					<button label="Search" forward="onSearch" />
+					<textbox width="90%" value="@bind(searchUrl.like)" />
+					<button label="Search"
+						onClick="@command('onSearch')" />
 				</vbox>
 			</listheader>
 			<listheader label="Ev. Date" tooltiptext="Last event date"
 				hflex="min" valign="top">
 				<vbox>
 					<datebox compact="true"
-						value="@{searchUrl.eventDateStart}" />
+						value="@bind(searchUrl.eventDateStart)" />
 					<datebox compact="true"
-						value="@{searchUrl.eventDateEnd}" />
+						value="@bind(searchUrl.eventDateEnd)" />
 				</vbox>
 			</listheader>
 			<listheader label="Mod. date" hflex="min"
 				tooltiptext="Last modified date" valign="top">
 				<vbox>
 					<datebox compact="true"
-						value="@{searchUrl.modifiedDateStart}" />
+						value="@bind(searchUrl.modifiedDateStart)" />
 					<datebox compact="true"
-						value="@{searchUrl.modifiedDateEnd}" />
+						value="@bind(searchUrl.modifiedDateEnd)" />
 				</vbox>
 			</listheader>
 			<listheader label="Type" hflex="min" valign="top">
 				<vbox>
 					<textbox cols="5"
-						value="@{searchUrl.contentBaseType}" />
+						value="@bind(searchUrl.contentBaseType)" />
 				</vbox>
 			</listheader>
 			<listheader label="Charset" hflex="min" valign="top">
 				<vbox>
 					<textbox cols="5"
-						value="@{searchUrl.contentTypeCharset}" />
+						value="@bind(searchUrl.contentTypeCharset)" />
 				</vbox>
 			</listheader>
 			<listheader label="Encoding" hflex="min" valign="top">
 				<vbox>
 					<textbox cols="5"
-						value="@{searchUrl.contentEncoding}" />
+						value="@bind(searchUrl.contentEncoding)" />
 				</vbox>
 			</listheader>
 			<listheader label="Content length" hflex="min"
 				valign="top">
 				<vbox>
 					<intbox cols="8"
-						value="@{searchUrl.minContentLength}" />
+						value="@bind(searchUrl.minContentLength)" />
 					<intbox cols="8"
-						value="@{searchUrl.maxContentLength}" />
+						value="@bind(searchUrl.maxContentLength)" />
 				</vbox>
 			</listheader>
 			<listheader label="Lang" hflex="min" valign="top">
 				<vbox>
-					<textbox cols="4" value="@{searchUrl.lang}" />
+					<textbox cols="4" value="@bind(searchUrl.lang)" />
 				</vbox>
 			</listheader>
 			<listheader label="Lang method" hflex="min" valign="top">
 				<vbox>
-					<textbox cols="8" value="@{searchUrl.langMethod}" />
+					<textbox cols="8"
+						value="@bind(searchUrl.langMethod)" />
 				</vbox>
 			</listheader>
 			<listheader label="Robots" hflex="min" valign="top">
 				<vbox>
 					<listbox mold="select" width="50px"
-						fixedLayout="true" model="@{searchUrl.robotsTxtStatusList}"
-						selectedItem="@{searchUrl.robotsTxtStatus}" />
+						fixedLayout="true" model="@load(searchUrl.robotsTxtStatusList)"
+						selectedItem="@bind(searchUrl.robotsTxtStatus)">
+						<template name="model">
+							<listitem label="@load(each.name)" />
+						</template>
+					</listbox>
 				</vbox>
 			</listheader>
 			<listheader label="Fetch" hflex="min" valign="top">
 				<vbox>
 					<listbox mold="select" width="50px"
-						fixedLayout="true" model="@{searchUrl.fetchStatusList}"
-						selectedItem="@{searchUrl.fetchStatus}" />
+						fixedLayout="true" model="@load(searchUrl.fetchStatusList)"
+						selectedItem="@bind(searchUrl.fetchStatus)">
+						<template name="model">
+							<listitem label="@load(each.name)" />
+						</template>
+					</listbox>
 				</vbox>
 			</listheader>
 			<listheader label="Code" hflex="min" valign="top">
 				<vbox>
-					<intbox cols="5" value="@{searchUrl.responseCode}" />
+					<intbox cols="5"
+						value="@bind(searchUrl.responseCode)" />
 				</vbox>
 			</listheader>
 			<listheader label="Parsing" hflex="min" valign="top">
 				<vbox>
 					<listbox mold="select" width="50px"
-						fixedLayout="true" model="@{searchUrl.parserStatusList}"
-						selectedItem="@{searchUrl.parserStatus}" />
+						fixedLayout="true" model="@load(searchUrl.parserStatusList)"
+						selectedItem="@bind(searchUrl.parserStatus)">
+						<template name="model">
+							<listitem label="@load(each.name)" />
+						</template>
+					</listbox>
 				</vbox>
 			</listheader>
 			<listheader label="Index" hflex="min" valign="top">
 				<vbox>
 					<listbox mold="select" width="50px"
-						fixedLayout="true" model="@{searchUrl.indexStatusList}"
-						selectedItem="@{searchUrl.indexStatus}" />
+						fixedLayout="true" model="@load(searchUrl.indexStatusList)"
+						selectedItem="@bind(searchUrl.indexStatus)">
+						<template name="model">
+							<listitem label="@load(each.name)" />
+						</template>
+					</listbox>
 				</vbox>
 			</listheader>
 			<listheader label="Host" valign="top">
 				<vbox>
-					<textbox width="90%" value="@{searchUrl.host}" />
+					<textbox width="90%" value="@bind(searchUrl.host)" />
 					<checkbox label="with sub"
-						checked="@{searchUrl.withSubDomain}" />
+						checked="@bind(searchUrl.withSubDomain)" />
 				</vbox>
 			</listheader>
 		</listhead>
-		<listitem self="@{each='url'}">
-			<listcell label="@{url.url}" />
-			<listcell
-				label="@{url.when,converter='com.jaeksoft.searchlib.web.converter.DateConverter'}" />
-			<listcell
-				label="@{url.lastModifiedDate,converter='com.jaeksoft.searchlib.web.converter.DateConverter'}" />
-			<listcell label="@{url.contentBaseType}" />
-			<listcell label="@{url.contentTypeCharset}" />
-			<listcell label="@{url.contentEncoding}" />
-			<listcell label="@{url.contentLength}" />
-			<listcell label="@{url.lang}" />
-			<listcell label="@{url.langMethod}" />
-			<listcell label="@{url.robotsTxtStatus}" />
-			<listcell label="@{url.fetchStatus}" />
-			<listcell label="@{url.responseCode}" />
-			<listcell label="@{url.ParserStatus}" />
-			<listcell label="@{url.IndexStatus}" />
-			<listcell label="@{url.Host}" />
-		</listitem>
+		<template name="model" var="url">
+			<listitem>
+				<listcell label="@load(url.url)" />
+				<listcell
+					label="@load(url.when) @converter('com.jaeksoft.searchlib.web.converter.DateConverter')" />
+				<listcell
+					label="@load(url.lastModifiedDate) @converter('com.jaeksoft.searchlib.web.converter.DateConverter')" />
+				<listcell label="@load(url.contentBaseType)" />
+				<listcell label="@load(url.contentTypeCharset)" />
+				<listcell label="@load(url.contentEncoding)" />
+				<listcell label="@load(url.contentLength)" />
+				<listcell label="@load(url.lang)" />
+				<listcell label="@load(url.langMethod)" />
+				<listcell label="@load(url.robotsTxtStatus.name)" />
+				<listcell label="@load(url.fetchStatus.name)" />
+				<listcell label="@load(url.responseCode)" />
+				<listcell label="@load(url.parserStatus.name)" />
+				<listcell label="@load(url.indexStatus.name)" />
+				<listcell label="@load(url.host)" />
+			</listitem>
+		</template>
 		<listfoot>
 			<listfooter span="15">
 				<paging id="paging" detailed="true"
-					totalSize="@{searchUrl.totalSize}" pageSize="@{searchUrl.pageSize}"
-					activePage="@{searchUrl.activePage}" />
-				<div id="taskLogInfo">
-					<label value="Line per page: " />
-					<intbox cols="3"
-						constraint="no negative, no zero, no negative"
-						value="@{searchUrl.pageSize}" forward="onChange=onSearch" />
-					<space width="50px" />
-					<label value="Total record number: " />
-					<longbox readonly="true"
-						value="@{searchUrl.recordNumber}" />
-					<space width="50px" />
-					<listbox mold="select" id="actionListbox"
-						disabled="@{searchUrl.urlManager.currentTaskLog}">
-						<listitem label="Select an action"
-							value="nothing" selected="true" />
-						<listitem label="Export URLs" value="exportTxt" />
-						<listitem label="Export XML SiteMap"
-							value="xmlSitemap" />
-						<listitem
-							label="Set selected URLs to Unfetched (re-crawl)"
-							value="setToUnfetched" />
-						<listitem label="Delete selected URLs"
-							value="deleteUrls" />
-						<listitem label="Delete all URLs"
-							value="deleteAll" />
-						<listitem label="Optimize URL database"
-							value="optimize" />
-					</listbox>
-					<space width="10px" />
-					<button label="Go" forward="onGo"
-						disabled="@{searchUrl.urlManager.currentTaskLog}" />
-					<label
-						visible="@{searchUrl.urlManager.currentTaskLog}"
-						value="@{searchUrl.urlManager.currentTaskLog.info}" />
-					<timer delay="5000" repeats="true"
-						onTimer="searchUrl.onTimer()"
-						running="@{searchUrl.refresh}" />
-				</div>
+					totalSize="@load(searchUrl.totalSize)"
+					pageSize="@load(searchUrl.pageSize)"
+					activePage="@bind(searchUrl.activePage)" />
+				<label value="Line per page: " />
+				<intbox cols="3"
+					constraint="no negative, no zero, no negative"
+					value="@bind(searchUrl.pageSize)" onChange="@command('onSearch')" />
+				<space width="50px" />
+				<label value="Total record number: " />
+				<longbox readonly="true"
+					value="@bind(searchUrl.recordNumber)" />
+				<space width="50px" />
+				<listbox mold="select"
+					selectedItem="@bind(searchUrl.batchCommand)"
+					disabled="@load(searchUrl.urlManager.currentTaskLog)">
+					<listitem label="Select an action" value="nothing"
+						selected="true" />
+					<listitem label="Export URLs" value="exportTxt" />
+					<listitem label="Export XML SiteMap"
+						value="xmlSitemap" />
+					<listitem
+						label="Set selected URLs to Unfetched (re-crawl)"
+						value="setToUnfetched" />
+					<listitem label="Delete selected URLs"
+						value="deleteUrls" />
+					<listitem label="Delete all URLs" value="deleteAll" />
+					<listitem label="Optimize URL database"
+						value="optimize" />
+				</listbox>
+				<space width="10px" />
+				<button label="Go" onClick="@command('onGo')"
+					disabled="@load(searchUrl.urlManager.currentTaskLogExists)" />
+				<label
+					visible="@load(searchUrl.urlManager.currentTaskLogExists)"
+					value="@load(searchUrl.urlManager.currentTaskLog.info)" />
+				<timer delay="5000" repeats="true"
+					onTimer="@command('onTimer')" running="@load(searchUrl.refresh)" />
 			</listfooter>
 		</listfoot>
 	</listbox>
