Proxy panel and Screnshot panel use the new MVVM model

--- a/WebContent/WEB-INF/zul/crawler/web/credential.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/credential.zul
@@ -15,7 +15,9 @@
 	If not, see <http://www.gnu.org/licenses/>.
 -->
 <window id="credential"
-	use="com.jaeksoft.searchlib.web.controller.crawler.web.CredentialController">
+	use="com.jaeksoft.searchlib.web.controller.crawler.web.CredentialController"
+	apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('manualCrawl') @init('com.jaeksoft.searchlib.web.controller.crawler.web.ManualWebCrawlController')">
 	<panel title="@{credential.currentEditMode}" border="normal">
 		<panelchildren>
 			<grid>
