--- a/WebContent/WEB-INF/zul/crawler/web/screenshot/index.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/screenshot/index.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,8 +14,8 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="screenshot" border="none"
-	use="com.jaeksoft.searchlib.web.controller.crawler.web.ScreenshotController">
+<window border="none" apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('screenshot') @init('com.jaeksoft.searchlib.web.controller.crawler.web.ScreenshotController')">
 	<tabbox>
 		<tabs>
 			<tab id="tabScreenshotCapture" label="Capture"
