--- a/WebContent/WEB-INF/zul/crawler/web/credential.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/credential.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2010-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,11 +14,9 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="credential"
-	use="com.jaeksoft.searchlib.web.controller.crawler.web.CredentialController"
-	apply="org.zkoss.bind.BindComposer"
-	viewModel="@id('manualCrawl') @init('com.jaeksoft.searchlib.web.controller.crawler.web.ManualWebCrawlController')">
-	<panel title="@{credential.currentEditMode}" border="normal">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('credential') @init('com.jaeksoft.searchlib.web.controller.crawler.web.CredentialController')">
+	<panel title="@load(credential.currentEditMode)" border="normal">
 		<panelchildren>
 			<grid>
 				<columns sizable="false">
@@ -29,34 +27,38 @@
 					<row>
 						<label value="Pattern: " />
 						<textbox
-							value="@{credential.currentCredential.pattern}"
-							readonly="@{credential.selected}" cols="50" />
+							value="@bind(credential.currentCredential.pattern)"
+							readonly="@load(credential.selected)" cols="50" />
 					</row>
 					<row>
 						<label value="Username: " />
 						<textbox
-							value="@{credential.currentCredential.username}" cols="20" />
+							value="@bind(credential.currentCredential.username)" cols="20" />
 					</row>
 					<row>
 						<label value="Password: " />
 						<textbox type="password"
-							value="@{credential.currentCredential.password}" cols="20" />
+							value="@bind(credential.currentCredential.password)" cols="20" />
 					</row>
 				</rows>
 				<foot>
 					<footer span="2">
 						<vbox width="100%" align="center">
-							<hbox visible="@{credential.selected}">
+							<hbox
+								visible="@load(credential.selected)">
 								<button label="Cancel"
-									forward="onCancel" />
+									onClick="@command('onCancel')" />
 								<space width="10px" />
-								<button label="Save" forward="onSave" />
+								<button label="Save"
+									onClick="@command('onSave')" />
 								<space width="30px" />
 								<button label="Delete"
-									forward="onDelete" />
+									onClick="@command('onDelete')" />
 							</hbox>
-							<hbox visible="@{credential.notSelected}">
-								<button label="Create" forward="onSave" />
+							<hbox
+								visible="@load(credential.notSelected)">
+								<button label="Create"
+									onClick="@command('onSave')" />
 							</hbox>
 						</vbox>
 					</footer>
@@ -67,8 +69,8 @@
 	<separator />
 	<panel title="List of existing credentials" border="normal">
 		<panelchildren>
-			<listbox model="@{credential.credentialList}"
-				selectedItem="@{credential.selectedCredential}">
+			<listbox model="@load(credential.credentialList)"
+				selectedItem="@bind(credential.selectedCredential)">
 				<listhead>
 					<listheader label="Pattern" />
 					<listheader label="Username" />
@@ -76,21 +78,25 @@
 				<auxhead>
 					<auxheader colspan="2">
 						<label>Filter:</label>
-						<textbox cols="20" value="@{credential.like}" />
+						<textbox cols="20"
+							value="@bind(credential.like)" />
 						<space />
-						<button label="Search" forward="onSearch" />
+						<button label="Search"
+							onClick="@command('onSearch')" />
 					</auxheader>
 				</auxhead>
-				<listitem self="@{each=creditem}">
-					<listcell label="@{creditem.pattern}" />
-					<listcell label="@{creditem.username}" />
-				</listitem>
+				<template name="model" var="creditem">
+					<listitem>
+						<listcell label="@load(creditem.pattern)" />
+						<listcell label="@load(creditem.username)" />
+					</listitem>
+				</template>
 				<listfoot>
 					<listfooter span="2">
 						<paging id="paging" detailed="true"
-							totalSize="@{credential.totalSize}"
-							pageSize="@{credential.pageSize}"
-							activePage="@{credential.activePage}" />
+							totalSize="@load(credential.totalSize)"
+							pageSize="@load(credential.pageSize)"
+							activePage="@bind(credential.activePage)" />
 					</listfooter>
 				</listfoot>
 			</listbox>
