--- a/WebContent/WEB-INF/zul/crawler/web/robotstxt.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/robotstxt.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,16 +14,16 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="robotsTxtCtrl"
-	use="com.jaeksoft.searchlib.web.controller.crawler.web.RobotsTxtController"
-	apply="org.zkoss.bind.BindComposer"
-	viewModel="@id('manualCrawl') @init('com.jaeksoft.searchlib.web.controller.crawler.web.ManualWebCrawlController')">
-	<checkbox label="Enabled" checked="@{robotsTxtCtrl.enabled.value}" />
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('robotsTxtCtrl') @init('com.jaeksoft.searchlib.web.controller.crawler.web.RobotsTxtController')">
+	<checkbox label="Enabled"
+		checked="@bind(robotsTxtCtrl.enabled.value)" />
 	<separator />
-	<listbox fixedLayout="true" model="@{robotsTxtCtrl.robotsTxtList}"
-		multiple="false" checkmark="false" mold="paging"
-		selectedItem="@{robotsTxtCtrl.selectedItem}"
-		pageSize="@{robotsTxtCtrl.pageSize}">
+	<listbox fixedLayout="true"
+		model="@load(robotsTxtCtrl.robotsTxtList)" multiple="false"
+		checkmark="false" mold="paging"
+		selectedItem="@bind(robotsTxtCtrl.selectedItem)"
+		pageSize="@load(robotsTxtCtrl.pageSize)">
 		<listhead sizable="true">
 			<listheader label="Hostname" />
 			<listheader label="Download date" />
@@ -33,40 +33,46 @@
 			<auxheader colspan="3">
 				<hbox width="100%">
 					<textbox cols="70"
-						value="@{robotsTxtCtrl.searchString}" />
-					<button label="Search / Refresh" forward="onSearch" />
+						value="@bind(robotsTxtCtrl.searchString)" />
+					<button label="Search / Refresh"
+						onClick="@command('onSearch')" />
 					<space />
-					<button label="Reset" forward="onReset" />
+					<button label="Reset" onClick="@command('onReset')" />
 				</hbox>
 			</auxheader>
 		</auxhead>
-		<listitem self="@{each='robotsTxt'}">
-			<listcell label="@{robotsTxt.crawl.urlItem.URL}" />
-			<listcell label="@{robotsTxt.crawlDate}" />
-			<listcell label="@{robotsTxt.expirationDate}" />
-		</listitem>
+		<template name="model" var="robotsTxt">
+			<listitem>
+				<listcell label="@load(robotsTxt.crawl.urlItem.URL)" />
+				<listcell label="@load(robotsTxt.crawlDate)" />
+				<listcell label="@load(robotsTxt.expirationDate)" />
+			</listitem>
+		</template>
 	</listbox>
 	<separator height="10px" />
 	<hbox width="100%">
 		<panel title="RobotsTxt content" border="normal">
 			<panelchildren>
 				<listbox
-					model="@{robotsTxtCtrl.selectedItem.disallowList.map}">
-					<listitem self="@{each='entry'}">
-						<listcell>
-							<panel title="@{entry.key}">
-								<panelchildren>
-									<listbox
-										model="@{entry.value.set}">
-										<listitem
-											self="@{each='entry2'}">
-											<listcell label="@{entry2}" />
-										</listitem>
-									</listbox>
-								</panelchildren>
-							</panel>
-						</listcell>
-					</listitem>
+					model="@load(robotsTxtCtrl.selectedItem.disallowList.map)">
+					<template name="model" var="entry">
+						<listitem>
+							<listcell>
+								<panel title="@load(entry.key)">
+									<panelchildren>
+										<listbox
+											model="@load(entry.value.set)">
+											<template name="model"
+												var="entry2">
+												<listitem
+													label="@load(entry2)" />
+											</template>
+										</listbox>
+									</panelchildren>
+								</panel>
+							</listcell>
+						</listitem>
+					</template>
 				</listbox>
 			</panelchildren>
 		</panel>
