--- a/WebContent/WEB-INF/zul/crawler/web/sitemap.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/sitemap.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -16,12 +16,10 @@
 	
 	Contributor: Richard Sinelle
 -->
-<window id="siteMapCtrl"
-	use="com.jaeksoft.searchlib.web.controller.crawler.web.SiteMapController"
-	apply="org.zkoss.bind.BindComposer"
-	viewModel="@id('manualCrawl') @init('com.jaeksoft.searchlib.web.controller.crawler.web.ManualWebCrawlController')">
-	<listbox selectedItem="@{siteMapCtrl.selectedSiteMap}"
-		model="@{siteMapCtrl.siteMapList.array}" mold="paging"
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('siteMapCtrl') @init('com.jaeksoft.searchlib.web.controller.crawler.web.SiteMapController')">
+	<listbox selectedItem="@bind(siteMapCtrl.selectedSiteMap)"
+		model="@load(siteMapCtrl.siteMapList.array)" mold="paging"
 		pageSize="20">
 		<listhead>
 			<listheader label="Site Map URL" align="left"
@@ -30,29 +28,31 @@
 		</listhead>
 		<auxhead>
 			<auxheader align="center">
-				<textbox value="@{siteMapCtrl.currentSiteMap.uri}"
+				<textbox value="@bind(siteMapCtrl.currentSiteMap.uri)"
 					width="95%" />
 			</auxheader>
 			<auxheader align="center">
-				<hbox visible="@{siteMapCtrl.selected}">
-					<button label="Cancel" forward="onCancel" />
+				<hbox visible="@load(siteMapCtrl.selected)">
+					<button label="Cancel"
+						onClick="@command('onCancel')" />
 					<space width="10px" />
-					<button label="Save" forward="onSave" />
+					<button label="Save" onClick="@command('onSave')" />
 				</hbox>
-				<hbox visible="@{siteMapCtrl.notSelected}">
-					<button label="Create" forward="onSave" />
+				<hbox visible="@load(siteMapCtrl.notSelected)">
+					<button label="Create" onClick="@command('onSave')" />
 				</hbox>
 			</auxheader>
 		</auxhead>
-		<listitem self="@{each=siteMapItem}">
-			<listcell label="@{siteMapItem.uri}" />
-			<listcell>
-				<button tooltiptext="Delete the Site Map URL"
-					label="Delete" onClick="siteMapCtrl.delete(self)">
-					<custom-attributes siteMapItem="@{siteMapItem}" />
-				</button>
-			</listcell>
-		</listitem>
+		<template name="model" var="siteMapItem">
+			<listitem>
+				<listcell label="@load(siteMapItem.uri)" />
+				<listcell>
+					<button tooltiptext="Delete the Site Map URL"
+						label="Delete"
+						onClick="@command('delete', siteMapItem=siteMapItem)" />
+				</listcell>
+			</listitem>
+		</template>
 		<listfoot>
 			<listfooter>
 				<vbox width="100%" align="center">
